--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,7 @@ title: Chartmander.js Examples
 
 <div class="container">
   <h1>Examples</h1>
-  <canvas id="sine" width="960" height="400"></canvas>
+  <canvas id="sine" style="background: #ccc;" width="960" height="400"></canvas>
 </div>
 <canvas id="bar" width="800" height="400"></canvas>
 <canvas id="line" width="800" height="400"></canvas>
