--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Chartmander - HTML5 canvas charts
 <header class="jumbotron chartmander">
   {% include nav.html %}
   <h1>Attractive charts for your new webapp or design mockup</h1>
-  <canvas id="chartmander-intro" class="chart" width="1200" height="400"></canvas>
+  <canvas id="chartmander-intro" style="background: rgb(79, 92, 102);" width="1200" height="400"></canvas>
 </header>
 
 <div class="container">
@@ -14,7 +14,7 @@ title: Chartmander - HTML5 canvas charts
         <h2 class="page-header">Bar Chart <small>great for category data</small><i class="ion-stats-bars pull-right"></i></h2>
       <div class="row charts">
         <div class="col-lg-12">
-          <canvas id="bar1" width="900" height="300"></canvas>
+          <canvas id="bar1" width="900" class="chart" height="300"></canvas>
         </div>
       </div>
     </div>
@@ -24,13 +24,13 @@ title: Chartmander - HTML5 canvas charts
       <h2 class="page-header"><i class="ion-ios7-pie-outline pull-right"></i>Pie Chart <small>great for ratio and quantity data</small></h2>
       <div class="row charts">
         <div class="col-lg-4">
-          <canvas id="pie1" width="200" height="300"></canvas>
+          <canvas id="pie1" class="chart" width="200" height="300"></canvas>
         </div>
         <div class="col-lg-4">
-          <canvas id="pie2" width="200" height="300"></canvas>
+          <canvas id="pie2" class="chart" width="200" height="300"></canvas>
         </div>
         <div class="col-lg-4">
-          <canvas id="pie3" width="200" height="300"></canvas>
+          <canvas id="pie3" class="chart" width="200" height="300"></canvas>
         </div>
       </div>
     </div>
