--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@ title: Chartmander - HTML5 canvas charts
   <canvas id="chartmander-intro" class="chart" width="1200" height="400"></canvas>
 </header>
 
+<div class="features">
+  <div class="container">
+    <h2>Three key features of Chartmander.js</h2>
+    <div class="row">
+      <div class="col-sm-4">
+        <i class="ion-ios7-pie-outline"></i>
+        <h4>Interaction</h4>
+        <p>Explore your data. Touch it, hover it. Your data will show up in a nice tooltip. Tooltip is painted on cavas. For richer styling options a html/css based tooltip is planed.</p>
+      </div>
+      <div class="col-sm-4">
+        <i class="ion-film-marker"></i>
+        <h4>Animation</h4>
+        <p>Drag attention of your users. With chartmander you can aniamte your charts on load and on update. Choose easing function from a wide range.</p>
+      </div>
+      <div class="col-sm-4">
+        <i class="ion-ios7-gear-outline"></i>
+        <h4>Customization</h4>
+        <p>This library was built with attention to design. Customize points on line chart, donut hole in pie chart or switch between stacked or grouped bar chart.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-lg-10 col-lg-offset-1">
