--- a/index.html
+++ b/index.html
@@ -58,21 +58,36 @@ title: Chartmander - HTML5 canvas charts
       </div>
     </div>
   </div>
+</div>
 
-  <div class="row">
-    <div class="col-lg-10 col-lg-offset-1">
-      <h2 class="page-header"><i class="ion-person pull-right"></i>About author <small>see github</small></h2>
-      <div class="row">
-        <div class="col-lg-8">
-        <a href="https://github.com/11th">Miroslav Petrik</a>
-        <p>Student at <a href="http://www.spseke.sk">SPSE Kosice</a> Slovakia</p>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+        <h2>About project</h2>
+        <div class="row">
+          <div class="col-sm-4">
+            <i class="ion-person"></i>
+            <h4>Author</h4>
+            <p>I am <a href="https://github.com/11th">Miroslav Petrik</a>, student at <a href="http://www.spseke.sk">SPSE Kosice</a>, Slovakia and this is my school project.</p>
+          </div>
+          <div class="col-sm-4">
+            <i class="ion-code-download"></i>
+            <h4>Open source</h4>
+            <p>Released under MIT Licence.</p>
+          </div>
+          <div class="col-sm-4">
+            <i class="ion-social-github-outline"></i>
+            <h4>Contribute</h4>
+            <p>Explore <a href="https://github.com/11th/Chartmander">GitHub repo</a> and feel free to fork it. In case of bug please create an issue.</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</footer>
+
 <script>
-  
   var myCharts = function () {
     Chartmander.addChart(function(){
       var chart = Chartmander.select("chartmander-intro", "line");
