--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ title: Chartmander - HTML5 canvas charts
         .colors(["#fff", "darkblue"])
         .easing("easeOutQuint")
         .pointRadius(10)
+        .pointHoverColor("#f8cb4c")
         .fontColor("#fff")
         .font("14px Arial")
 
