--- a/press-web/index.html
+++ b/press-web/index.html
@@ -46,28 +46,33 @@
 					<h2>Vizualizácia dát na webe</h2>
 					<h3>Miroslav Petrik</h3>
 				</section>
-					<section class="idea blacky">
-						<h2>Projekt stredoškolskej odbornej činnosti</h2>
-						<div class="row">
-							<div class="col-sm-4">
-								<i class="ion-speedometer ion-xl longo"></i>
-								<p>zistenie stavu, trendu</p>
-							</div>
-							<div class="col-sm-4">
-								<i class="ion-stats-bars ion-xl longo wise"></i>
-								<p>vizualizácia</p>
-							</div>
-							<div class="col-sm-4">
-								<i class="ion-flash ion-xl longo"></i>
-								<p>akcia</p>
-							</div>
-						</div>
-						<ul>
-							<li>čo nevieš odmerať nevieš manažovať</li>
-							<li>vizualizácia je najrýchlejšia cesta ako odkomunikovať informáciu človeku</li>
-						</ul>
-					</section>	
 
+				<section class="idea blacky">
+					<h2>Projekt stredoškolskej odbornej činnosti</h2>
+					<div class="row">
+						<div class="col-sm-4">
+							<i class="ion-speedometer ion-xl longo"></i>
+							<p>zistenie stavu, trendu</p>
+						</div>
+						<div class="col-sm-4">
+							<i class="ion-stats-bars ion-xl longo wise"></i>
+							<p>vizualizácia</p>
+						</div>
+						<div class="col-sm-4">
+							<i class="ion-flash ion-xl longo"></i>
+							<p>akcia</p>
+						</div>
+					</div>
+					<ul>
+						<li>čo nevieš odmerať nevieš manažovať</li>
+						<li>vizualizácia je najrýchlejšia cesta ako odkomunikovať informáciu človeku</li>
+					</ul>
+				</section>
+<!-- 
+				<section>
+					<h2>Animácia a interakcia</h2>
+				</section>
+ -->
 				<section data-background="#2d2d55" data-background-transition="slide" data-transition="linear" class="whitey technologie">
 					<section id="technologie">
 						<h1>Použité technológie</h1>
@@ -138,12 +143,14 @@
 
 				<section data-background="#0e83cd" class="whitey">
 					<section>
-						<i class="ion-xl longo ion-github"></i>
+						<i class="ion-xl longo ion-social-github"></i>
 						<h2>Open source</h2>
 						<h2>11th.github.io/Chartmander/</h2>
 					</section>
 					<section>
-						<h1>Ďakujem za pozornosť</h1>
+						<h2>Ďakujem za pozornosť</h2>
+						<h3>Chartmander.js</h3>
+						<h3>Miroslav Petrik</h3>
 					</section>
 				</section>
 			</div>
@@ -193,7 +200,7 @@
 				Chartmander.addChart(function(){
 					var chart = Chartmander.select("chart-intro", "line");
 					chart
-						.colors(['#a0abbf', '#15a4fa'])
+						.colors(['#dfe2e4', '#b5c5cf'])
 						.pointRadius(10)
 						.lineWidth(4)
 						.showXAxis(false)
