--- a/press-web/index.html
+++ b/press-web/index.html
@@ -137,9 +137,9 @@
 					</div>
 				</section>
 
-				<section data-background="img/mock1.png"></section>
-				<section data-background="img/mock2.png"></section>
-				<section data-background="img/mock3.png"></section>
+				<section data-background="img/m1.jpg"></section>
+				<section data-background="img/m2.jpg"></section>
+				<section data-background="img/m3.jpg"></section>
 
 				<section data-background="#0e83cd" class="whitey">
 					<section>
