--- a/press-web/index.html
+++ b/press-web/index.html
@@ -149,7 +149,7 @@
 					</section>
 					<section>
 						<h2>Ďakujem za pozornosť</h2>
-						<h3>Chartmander.js</h3>
+						<h3><a href="http://11th.github.io/Chartmander/">Chartmander.js</a></h3>
 						<h3>Miroslav Petrik</h3>
 					</section>
 				</section>
