--- a/examples/index.html
+++ b/examples/index.html
@@ -9,9 +9,14 @@ title: Chartmander.js Examples
 <div class="container">
   <h1>Examples</h1>
   <canvas id="bar" width="800" height="400"></canvas>
-  <canvas id="line" width="800" height="400"></canvas>
 </div>
 
 <script>
-  
+  Chartmander.addChart(function () {
+  	var chart = Chartmander.select('bar', 'categoryBar');
+
+  	chart.render();
+
+  	return chart;
+  });
 </script>
