Example chart color

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ title: Chartmander - HTML5 canvas charts
     .addChart(function(){
       var chart = Chartmander.select("chartmander-intro", "line");
       chart
-        .colors(["#fafafa"])
+        .colors(["#fff"])
         .easing("easeOutQuint")
         .pointRadius(10)
         .pointHoverColor("#f8cb4c")
@@ -110,7 +110,7 @@ title: Chartmander - HTML5 canvas charts
     .addChart(function(){
       var chart = Chartmander.select("bar1", "bar");
       chart
-        .colors(["#fbb03b"])
+        .colors(["#28abe3"])
         .render(dataFactory(["Petrol"], yearByMonths(1), 300))
         ;
 
