Separate dependencies, move layer to components

--- a/examples/line.html
+++ b/examples/line.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Chartmander.js - Line Chart</title>
   <link rel="stylesheet" href="../css/chartmander.css">
-  <script src="../js/tinycolor.js"></script>
-  <script src="../js/moment.min.js"></script>
+  <script src="../lib/tinycolor.js"></script>
+  <script src="../lib/moment.min.js"></script>
   <script src="../js/chartmander.js"></script>
   <script src="../js/dataFactory.js"></script>
 </head>
