--- a/examples/bar.html
+++ b/examples/bar.html
@@ -18,7 +18,7 @@
   <script>
   Chartmander
     .addChart(function(){
-      var chart = Chartmander.select("bar-default", "bar");
+      var chart = Chartmander.select("bar-default", "historicalBar");
       chart
         .render(dataFactory(["Petrol"], yearByMonths(1), 300))
         ;
