Use Layer as baseChart

--- a/examples/pie.html
+++ b/examples/pie.html
@@ -20,7 +20,7 @@
     .addChart(function(){
       var chart = Chartmander.select("pie-default", "pie");
       chart
-        .render(dataFactory(["Eat","Sleep","Rave"], ["Day in a fast Life"], 200))
+        .render(dataFactory(["Eat", "Sleep", "Rave", "Repeat"], ["Day in a fast Life"], 20))
         ;
       return chart;
     })
