--- a/examples/bar.html
+++ b/examples/bar.html
@@ -16,15 +16,11 @@
   </ul>
   <canvas id="bar-default" width="800" height="300"></canvas>
   <script>
-  Chartmander
-    .addChart(function(){
-      var chart = Chartmander.select("bar-default", "historicalBar");
-      chart.bars.colors(["red"])
-      chart
-        .render(dataFactory(["Petrol"], yearByMonths(1), 300))
-        ;
-      return chart;
-    })
+  Chartmander.addChart(function(){
+    var chart = Chartmander.select("bar-default", "historicalBar");
+    chart.render(dataFactory(["One", "Two"], yearByMonths(1), 300));
+    return chart;
+  })
   </script>
 </body>
 </html>
