--- a/examples/line.html
+++ b/examples/line.html
@@ -16,14 +16,11 @@
   </ul>
   <canvas id="line-default" width="800" height="300"></canvas>
   <script>
-  Chartmander
-    .addChart(function(){
-      var chart = Chartmander.select("line-default", "line");
-      chart
-        .render(dataFactory(["Petrol", "Fiesta"], yearByMonths(1), 300))
-        ;
-      return chart;
-    })
+  Chartmander.addChart(function(){
+    var chart = Chartmander.select("line-default", "line");
+    chart.render(dataFactory(["Petrol", "Fiesta"], yearByMonths(1), 300));
+    return chart;
+  })
   </script>
 </body>
 </html>
