Use new model styling

--- a/index.html
+++ b/index.html
@@ -89,12 +89,10 @@ title: Chartmander - HTML5 canvas charts
 
 <script>
   var myCharts = function () {
-    Chartmander
-    .addChart(function(){
+    Chartmander.addChart(function(){
       var chart = Chartmander.select("chartmander-intro", "line");
-      chart
+      chart.lines
         .colors(["#fff"])
-        .easing("easeOutQuint")
         .pointRadius(10)
         .pointHoverColor("#f8cb4c")
         .fontColor("#fff")
@@ -104,44 +102,33 @@ title: Chartmander - HTML5 canvas charts
       chart.grid
         .lineColor("rgba(0,0,0,.11)");
 
-      chart.render(dataFactory(["Petrol"], yearByMonths(1), 500));
+      chart.render(dataFactory(["One"], yearByMonths(1), 500));
       return chart;
-    })
-    .addChart(function(){
-      var chart = Chartmander.select("bar1", "bar");
-      chart
-        .colors(["#28abe3"])
-        .render(dataFactory(["Petrol"], yearByMonths(1), 300))
-        ;
-
+    }).addChart(function(){
+      var chart = Chartmander.select("bar1", "historicalBar");
+      chart.bars
+        .colors(["#28abe3"]);
+      chart.render(dataFactory(["One"], yearByMonths(1), 300));
       return chart;
-    })
-    .addChart(function(){
+    }).addChart(function(){
       var chart = Chartmander.select("pie1", "pie");
-      chart
-        .colors(["#28abe3", "#0071bd", "#2e3192"])
-        .render(dataFactory(["Eat","Sleep","Rave"], ["Day in a fast Life"], 200))
-        ;
-
+      chart.pie
+        .colors(["#28abe3", "#0071bd", "#2e3192"]);
+      chart.render(dataFactory(["One", "Two", "Three"], ["Example data"], 200));
       return chart;
     }).addChart(function(){
       var chart = Chartmander.select("pie2", "pie");
-      chart
+      chart.pie
         .innerRadius(0)
-        .colors(["#f15a25", "#fbb03b", "#fdee21"])
-        .render(dataFactory(["Eat","Sleep","Rave"], ["Day in a Life"], 200))
-        ;
-
+        .colors(["#f15a25", "#fbb03b", "#fdee21"]);
+      chart.render(dataFactory(["One", "Two", "Three"], ["Example data"], 200));
       return chart;
-    })
-    .addChart(function(){
+    }).addChart(function(){
       var chart = Chartmander.select("pie3", "pie");
-      chart
+      chart.pie
         .innerRadius(.8)
-        .colors(["#8cc63e", "#009345"])
-        .render(dataFactory(["Used","Ready"], ["Ram Usage"], 200))
-        ;
-
+        .colors(["#8cc63e", "#009345"]);
+      chart.render(dataFactory(["One", "Two"], ["Example data"], 200));
       return chart;
     });
   }
