Update examples with random data

--- a/examples/line.html
+++ b/examples/line.html
@@ -13,14 +13,18 @@
   <h1>Line Chart</h1>
   <ul>
     <li><a href="index.html">All examples</a>
+    <li><button onclick="chart();">Update</button>
   </ul>
   <canvas id="line-default" width="800" height="300"></canvas>
   <script>
-  Chartmander.addChart(function(){
-    var chart = Chartmander.select("line-default", "line");
-    chart.render(dataFactory(["Petrol", "Fiesta"], yearByMonths(1), 300));
-    return chart;
-  })
+  function chart () {
+    Chartmander.addChart(function(){
+      var chart = Chartmander.select("line-default", "line");
+      chart.render(dataFactory(["Petrol", "Fiesta"], yearByMonths(1), 300));
+      return chart;
+    });
+  }
+  chart();
   </script>
 </body>
 </html>
