Category Bar Chart

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,8 @@
   <h1>Current charts</h1>
   <ul>
     <li><a href="pie.html">Pie Chart</a>
-    <li><a href="bar.html">Bar Chart</a>
+    <li><a href="historicalBar.html">Historical Bar Chart</a>
+    <li><a href="categoryBar.html">Category Bar Chart</a>
     <li><a href="line.html">Line Chart</a>
   </ul>
 </body>
