--- a/examples/line.html
+++ b/examples/line.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Chartmander.js - Line Chart</title>
+  <title>Line Chart</title>
   <link rel="stylesheet" href="../css/chartmander.css">
   <script src="../lib/tinycolor.js"></script>
   <script src="../lib/moment.min.js"></script>
