fix pie chart sochi

--- a/sochi/countries.html
+++ b/sochi/countries.html
@@ -73,7 +73,7 @@ $(function(){
       Chartmander.addChart(function(){
         var chart = Chartmander.select("pieMedals", "pie");
         chart.pie
-          .colors(["#c35f00", "#e3e3e3", "#ffbf00"]);
+          .colors(["#c35f00", "#ffbf00", "#e3e3e3"]);
         chart.render(parsePieMedals(data.name, data.medals));
         return chart;
       });
